--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DocumentActivity"></activity>
+        <activity android:name=".DocumentListActivity"></activity>
+        <activity android:name=".DocumentTypeListActivity"></activity>
+        <activity android:name=".NewDatabaseActivity"></activity>
 
     </application>
 </manifest>
