--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".DocumentListActivity"></activity>
         <activity android:name=".DocumentTypeListActivity"></activity>
         <activity android:name=".NewDatabaseActivity"></activity>
+        <activity android:name=".DatabaseActivity"></activity>
 
     </application>
 </manifest>
