--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".DocumentTypeListActivity"></activity>
         <activity android:name=".NewDatabaseActivity"></activity>
         <activity android:name=".DatabaseActivity"></activity>
-        <service android:name=".SyncerService"></service>
+        <service android:name=".TestSyncerService"></service>
 
     </application>
 </manifest>
