--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,5 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="libs/commons-codec-1.5.jar"/>
 	<classpathentry kind="lib" path="libs/gson-1.7.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
